# simple_chat_backend

./: .gitignore  README.md  conftest.py  new_database.db  pyproject.toml  pytest.ini  simple_chat_backend.db  simple_chat_backend_dump.sql
apps/chat/: admin.py  conftest.py  filters.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/chat/migrations/: 0001_initial.py  0002_rename_tread_message_thread.py  0003_alter_message_options_alter_thread_options.py
apps/users/: managers.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps_generic/whodidit/: models.py  serializers.py
envs/local/backend/: .env
infrastructure/middlewares/: current_request.py
infrastructure/renders/: default_renders.py
simple_chat/: settings.py  urls.py
